--- a/web-start/index.html
+++ b/web-start/index.html
@@ -46,73 +46,133 @@
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
   <!-- App Styling -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:200,200i,400,400i,700,700i,900,900i" rel="stylesheet">
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/main.css">
+
 </head>
 <body>
-<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
   <!-- Header section containing logo -->
-  <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
-    <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
-      <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-        <h3><i class="material-icons">chat_bubble_outline</i> Zap Chat</h3>
-      </div>
-      <div id="user-container">
-        <div hidden id="user-pic"></div>
-        <div hidden id="user-name"></div>
-        <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-          Sign-out
-        </button>
-        <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-          <i class="material-icons">account_circle</i>Sign-in with Google
-        </button>
-      </div>
+  <header>
+    <div class="title">
+      <h1>ZapChat</h1>
+    </div>
+    <div class="info" id="user-container">
+      <div hidden id="user-pic"></div>
+      <div hidden id="user-name"></div>
+      <button hidden id="settings">
+        Settings&nbsp;&nbsp;<i class="fa fa-cog"></i>
+      </button>
+      <button hidden id="sign-out">
+        Sign-out&nbsp;&nbsp;<i class="fa fa-sign-out"></i>
+      </button>
     </div>
   </header>
-
-  <main class="mdl-layout__content mdl-color--grey-100">
-    <div id="messages-card-container" class="mdl-cell mdl-cell--12-col mdl-grid">
-
-      <!-- Messages container -->
-      <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--6-col-desktop">
-        <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-          <div id="messages">
-            <span id="message-filler"></span>
+  <main>
+    <div id="login-section" class="row login-section">
+      <div class="card">
+        <div class="form-group">
+          <label for="signin-email">Email</label>
+          <input type="text" class="form-control" id="signin-email" placeholder="Email">
+        </div>
+        <div class="form-group">
+          <label for="signin-password">Password</label>
+          <input type="password" class="form-control" id="signin-password" placeholder="Password">
+        </div>
+        <div hidden id="settings-section" class="settings-section">
+          <div class="form-group">
+            <label for="display-name">Display Name</label>
+            <input type="text" class="form-control" id="display-name" placeholder="Display name">
           </div>
-          <form id="message-form" action="#">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input class="mdl-textfield__input" type="text" id="message">
-              <label class="mdl-textfield__label" for="message">Message...</label>
+          <div class="button-group">
+            <button id="save-settings" class="btn btn-primary">
+              Save Profile
+            </button>
+          </div>
+        </div>
+        <div class="button-group">
+          <button id="sign-in" class="btn btn-primary sign-in-btn">
+            Sign In
+          </button>
+          <button id="create-user" class="btn btn-primary create-user-btn">
+            Create an Account
+          </button>
+        </div>
+        <div class="button-group forgot-password">
+          <button id="forgot-password" class="btn btn-default">Forgot password?</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="row chat">
+      <div hidden id="message-section" class="col col-sm-8 messages">
+        <div id="messages-card-container">
+
+          <!-- Messages container -->
+          <div id="messages-card">
+            <div id="messages">
+              <span id="message-filler"></span>
             </div>
-            <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-              Send
-            </button>
-          </form>
-          <form id="image-form" action="#">
-            <input id="mediaCapture" type="file" accept="image/*,capture=camera">
-            <button id="submitImage" title="Add an image" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--amber-400 mdl-color-text--white">
-              <i class="material-icons">image</i>
-            </button>
-          </form>
+            <form id="image-form" action="#">
+              <input id="mediaCapture" type="file" accept="image/*,capture=camera">
+              <button id="submitImage" title="Add an image" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--amber-400 mdl-color-text--white">
+                <i class="material-icons">image</i>
+              </button>
+            </form>
+            <form id="message-form" action="#">
+              <div class="input-group">
+                <input type="text" id="message" class="form-control" placeholder="Message...">
+                <span class="input-group-btn">
+                  <input type="submit" id="submit" class="btn btn-secondary" type="button" />
+                </span>
+              </div>
+            </form>
+          </div>
+          <div id="must-signin-snackbar" class="mdl-js-snackbar mdl-snackbar">
+            <div class="mdl-snackbar__text"></div>
+            <button class="mdl-snackbar__action" type="button"></button>
+          </div>
         </div>
       </div>
 
-      <div id="must-signin-snackbar" class="mdl-js-snackbar mdl-snackbar">
-        <div class="mdl-snackbar__text"></div>
-        <button class="mdl-snackbar__action" type="button"></button>
+      <div hidden id="chat-section" class="col col-sm-4 chats">
+        <!-- Chats container -->
+        <div id="chats-card">
+          <h3>My Chats</h3>
+          <div id="chats" class="list-group">
+            <span id="chats-filler"></span>
+          </div>
+        </div>
       </div>
-
+    </div>
+    <div class="row user-row">
+      <div hidden id="user-section" class="col col-sm-12 users">
+          <form id="start-chat-form" action="#">
+            <div id="users-card-container">
+              <!-- Users container -->
+              <div id="users-card">
+                  <div id="users">
+                      <span id="users-filler"></span>
+                  </div>
+              </div>
+            </div>
+            <input type="text" class="form-control" id="chat_name" placeholder="Chat name..." />
+            <button id="start-chat-submit" class="btn">Start Chat</button>
+          </form>
+      </div>
     </div>
   </main>
-</div>
 
 <!-- Import and configure the Firebase SDK -->
 <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
 <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
 <script src="/__/firebase/4.1.3/firebase.js"></script>
 <script src="/__/firebase/init.js"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.3/js/tether.min.js"></script>
+<script src="scripts/bootstrap.min.js"></script>
 <script src="scripts/main.js"></script>
 </body>
 </html>
